--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <script src="html5-qrcode.min.js"></script>
 <style>
-  .result{
+  .result {
     background-color: green;
-    color:#fff;
-    padding:20px;
+    color: #fff;
+    padding: 20px;
   }
-  .row{
-    display:flex;
+  .row {
+    display: flex;
   }
 </style>
 
-
 <div class="row">
   <div class="col">
-    <div style="width:500px;" id="reader"></div>
+    <div style="width: 500px;" id="reader"></div>
   </div>
-  <div class="col" style="padding:30px;">
+  <div class="col" style="padding: 30px;">
     <h4>SCAN RESULT</h4>
     <div id="result">Result Here</div>
   </div>
 </div>
 
-
 <script type="text/javascript">
 function onScanSuccess(qrCodeMessage) {
-    document.getElementById('result').innerHTML = '<span class="result">'+qrCodeMessage+'</span>';
+  document.getElementById('result').innerHTML =
+    '<span class="result">' + qrCodeMessage + '</span>';
 }
 
 function onScanError(errorMessage) {
-  //handle scan error
+  // Handle scan error
 }
 
-var html5QrcodeScanner = new Html5QrcodeScanner(
-    "reader", { fps: 10, qrbox: 250 });
-html5QrcodeScanner.render(onScanSuccess, onScanError);
+var preferredCamera = 'environment'; // Rear camera
 
+var html5QrcodeScanner = new Html5QrcodeScanner(
+  "reader",
+  { fps: 10, qrbox: 250, preferredCamera: preferredCamera }
+);
+html5QrcodeScanner.render(onScanSuccess, onScanError);
 </script>
