--- a/index.html
+++ b/index.html
@@ -1,40 +1,50 @@
-<script src="html5-qrcode.min.js"></script>
-<style>
-  .result {
-    background-color: green;
-    color: #fff;
-    padding: 20px;
-  }
-  .row {
-    display: flex;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QR Scanner</title>
+</head>
+<body>
+    <h1>QR Scanner</h1>
+    <div id="reader" style="max-width: 100%;"></div>
 
-<div class="row">
-  <div class="col">
-    <div style="width: 500px;" id="reader"></div>
-  </div>
-  <div class="col" style="padding: 30px;">
-    <h4>SCAN RESULT</h4>
-    <div id="result">Result Here</div>
-  </div>
-</div>
+    <script src="html5-qrcode.min.js"></script>
+    <script>
+        const qrCodeScanner = new Html5Qrcode("reader");
 
-<script type="text/javascript">
-function onScanSuccess(qrCodeMessage) {
-  document.getElementById('result').innerHTML =
-    '<span class="result">' + qrCodeMessage + '</span>';
-}
+        window.addEventListener("DOMContentLoaded", () => {
+            qrCodeScanner.start(
+                { facingMode: "environment" }, // Use the back camera
+                { fps: 10, qrbox: 250 },
+                (qrCodeMessage) => {
+                    // QR code detected
+                    console.log("QR Code detected:", qrCodeMessage);
+                    qrCodeScanner.stop();
+                },
+                (errorMessage) => {
+                    // Failed to scan QR code
+                    console.error(errorMessage);
+                }
+            );
 
-function onScanError(errorMessage) {
-  // Handle scan error
-}
+            window.addEventListener("resize", () => {
+                qrCodeScanner.start(
+                    { facingMode: "environment" }, // Use the back camera
+                    { fps: 10, qrbox: 250 },
+                    (qrCodeMessage) => {
+                        // QR code detected
+                        console.log("QR Code detected:", qrCodeMessage);
+                        qrCodeScanner.stop();
+                    },
+                    (errorMessage) => {
+                        // Failed to scan QR code
+                        console.error(errorMessage);
+                    }
+                );
+            });
+        });
+    </script>
+</body>
+</html>
 
-var preferredCamera = 'environment'; // Rear camera
-
-var html5QrcodeScanner = new Html5QrcodeScanner(
-  "reader",
-  { fps: 10, qrbox: 250, preferredCamera: preferredCamera }
-);
-html5QrcodeScanner.render(onScanSuccess, onScanError);
-</script>
