--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="reader" style="max-width: 100%;"></div>
     <div id="result"></div>
 
-    <script src="node_modules/html5-qrcode/minified/html5-qrcode.min.js"></script>
+    <script src="html5-qrcode.min.js"></script>
     <script>
         const qrCodeScanner = new Html5Qrcode("reader");
         const scannedCodes = new Set(); // To keep track of scanned QR codes
