--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="html5-qrcode.min.js"></script>
     <script>
         const qrCodeScanner = new Html5Qrcode("reader");
-        const expectedQRCode = "1234"; // YOUR EXPECTED QR CODE HERE
+        const expectedQRCode = "http://1234"; // YOUR EXPECTED QR CODE HERE
 
         qrCodeScanner.start(
             { facingMode: "environment" }, // Use the back camera
