--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
     <h1>QR Scanner</h1>
     <div id="reader" style="max-width: 100%;"></div>
     <div id="result"></div>
+    <div id="correctMessage" style="display: none;">Correct QR Code Found!</div>
 
     <script src="html5-qrcode.min.js"></script>
     <script>
         const qrCodeScanner = new Html5Qrcode("reader");
-        const expectedQRCode = "http://1234"; // YOUR EXPECTED QR CODE HERE
+        const expectedQRCode = "http://1234"; // Change this to the expected QR code value
+        let correctCodeScanned = false;
 
         qrCodeScanner.start(
             { facingMode: "environment" }, // Use the back camera
             { fps: 10, qrbox: 250 },
             (qrCodeMessage) => {
-                if (qrCodeMessage === expectedQRCode) {
-                    console.log("QR Code detected:", qrCodeMessage);
+                if (!correctCodeScanned && qrCodeMessage === expectedQRCode) {
+                    console.log("Correct QR Code detected:", qrCodeMessage);
                     displayResult(qrCodeMessage);
+                    correctCodeScanned = true;
+                    showCorrectMessage();
                 }
             },
             (errorMessage) => {
@@ -31,6 +35,7 @@
         );
 
         const resultContainer = document.getElementById("result");
+        const correctMessage = document.getElementById("correctMessage");
 
         function displayResult(message) {
             const resultElement = document.createElement("p");
@@ -38,14 +43,20 @@
             resultContainer.appendChild(resultElement);
         }
 
+        function showCorrectMessage() {
+            correctMessage.style.display = "block";
+        }
+
         window.addEventListener("resize", () => {
             qrCodeScanner.start(
                 { facingMode: "environment" }, // Use the back camera
                 { fps: 10, qrbox: 250 },
                 (qrCodeMessage) => {
-                    if (qrCodeMessage === expectedQRCode) {
-                        console.log("QR Code detected:", qrCodeMessage);
+                    if (!correctCodeScanned && qrCodeMessage === expectedQRCode) {
+                        console.log("Correct QR Code detected:", qrCodeMessage);
                         displayResult(qrCodeMessage);
+                        correctCodeScanned = true;
+                        showCorrectMessage();
                     }
                 },
                 (errorMessage) => {
