--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div id="reader" style="max-width: 100%;"></div>
     <div id="result"></div>
     <div id="sessionMessage" style="display: none;">Session Started</div>
+    <div id="searchForm" style="display: none;">
+        <input type="text" id="searchInput" placeholder="Enter value to search">
+        <button id="searchButton">Search</button>
+    </div>
+
     <button id="toggleScanner">Toggle Scanner</button>
 
     <script src="html5-qrcode.min.js"></script>
@@ -21,6 +26,11 @@
 
         const toggleScannerButton = document.getElementById("toggleScanner");
         toggleScannerButton.addEventListener("click", toggleScanner);
+
+        const searchForm = document.getElementById("searchForm");
+        const searchInput = document.getElementById("searchInput");
+        const searchButton = document.getElementById("searchButton");
+        searchButton.addEventListener("click", performSearch);
 
         function toggleScanner() {
             if (sessionStarted) {
@@ -56,6 +66,7 @@
 
         const resultContainer = document.getElementById("result");
         const sessionMessage = document.getElementById("sessionMessage");
+        const searchInputField = document.getElementById("searchInput");
 
         function displayResult(message) {
             const resultElement = document.createElement("p");
@@ -66,6 +77,7 @@
         function startSession() {
             sessionStarted = true;
             sessionMessage.style.display = "block";
+            searchForm.style.display = "block";
             qrCodeScanner.stop(); // Turn off the camera after session has started
         }
 
@@ -76,6 +88,25 @@
             if (message !== startSessionQRCode) {
                 console.log("New QR Code found:", message);
                 displayResult("New QR Code Found: " + message);
+            }
+        }
+
+        function performSearch() {
+            const searchTerm = searchInput.value;
+            if (searchTerm) {
+                qrCodeScanner.start(
+                    { facingMode: "environment" },
+                    { fps: 10, qrbox: 250 },
+                    handleQRCodeScannedDuringSearch,
+                    handleQRCodeError
+                );
+            }
+        }
+
+        function handleQRCodeScannedDuringSearch(qrCodeMessage) {
+            if (qrCodeMessage === searchInput.value) {
+                console.log("Searched QR Code found:", qrCodeMessage);
+                displayResult("Searched QR Code Found: " + qrCodeMessage);
             }
         }
 
