--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         const startSessionQRCode = "http://1234"; // Change this to the QR code to start a session
         let sessionStarted = false;
         let scannerEnabled = true;
+        const scannedQRCodes = []; // Array to store scanned QR codes
 
         const toggleScannerButton = document.getElementById("toggleScanner");
         toggleScannerButton.addEventListener("click", toggleScanner);
@@ -88,9 +89,13 @@
         const searchInputField = document.getElementById("searchInput");
 
         function displayResult(message) {
-            const resultElement = document.createElement("p");
-            resultElement.textContent = "Scanned QR Code: " + message;
-            resultContainer.appendChild(resultElement);
+            // Check if the scanned QR code is already in the list
+            if (!scannedQRCodes.includes(message)) {
+                scannedQRCodes.push(message); // Add scanned QR code to the list
+                const resultElement = document.createElement("p");
+                resultElement.textContent = "Scanned QR Code: " + message;
+                resultContainer.appendChild(resultElement);
+            }
         }
 
         function startSession() {
@@ -131,6 +136,7 @@
             if (qrCodeMessage === searchInput.value) {
                 console.log("Searched QR Code found:", qrCodeMessage);
                 displayResult("Searched QR Code Found: " + qrCodeMessage);
+                qrCodeScanner.stop(); // Stop the scanner after the searched QR code is found
             }
         }
 
