--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <button id="searchButton">Search</button>
     </div>
 
+    <button id="toggleScanner">Toggle Scanner</button>
+
     <div id="result"></div>
     <div id="sessionMessage" style="display: none;">Session Started</div>
 
